# C_collections

./: .gitignore  CMakeLists.txt  README.md  TODO
data_structures/graph_adj_matrix/: Makefile  TODO
data_structures/graph_adj_matrix/inc/: graph_adj_matrix.h  matrix.h  vector.h
data_structures/graph_adj_matrix/src/: graph_adj_matrix.c  matrix.c  vector.c
data_structures/graph_adj_matrix/test/: test.c  test_graph.c  test_matrix.c  test_vector.c
data_structures/matrix/: Makefile  TODO
data_structures/matrix/test/: test.c
data_structures/vector/: TODO
data_structures/vector/inc/: vector.h
data_structures/vector/src/: vector.c
data_structures/vector/test/: test.c  test_vector.c
hash_table/: CMakeLists.txt
hash_table/inc/: hash_table.h
hash_table/src/: hash_table.c
hash_table/test/: hash_table_unit_tests.c
vector/: CMakeLists.txt
vector/inc/: vector.h
vector/src/: vector.c
vector/test/: test_vector.c
